<resources>
    //login
    <string name="app_name">Nas</string>
    <string name="txtcorreoL">Correo</string>
    <string name="txtcontraseñaL">Contraseña</string>
    <string name="btnloginL">Siguiente</string>
    <string name="btnregistroL">Registro</string>

    //registro
    <string name="btnNiñera">Niñera</string>
    <string name="btnPadre">Padre</string>
    <string name="btnAtras">Atrás</string>

    //registro padre
    <string name="txtNombre2">Nombre</string>
    <string name="txtDireccion">Dirección</string>
    <string name="txtCedula">Cédula</string>
    <string name="txtTelefono">Teléfono</string>
    <string name="txtCorreo2">Correo</string>
    <string name="txtContraseña2">Contraseña</string>
    <string name="btnSiguiente2">Registrar</string>
    <string name="btnAtras2">Atrás</string>
    <string name="consu">consu</string>

    //registro niñera
    <string name="txtNombre1">Nombre</string>
    <string name="txtDireccion2">Dirección</string>
    <string name="txtCedula2">Cédula</string>
    <string name="txtTelefono2">Teléfono</string>
    <string name="txtCorreo3">Correo</string>
    <string name="txtContraseña3">Contraseña</string>
    <string name="btnSiguiente3">Registrar</string>
    <string name="btnAtras3">Atrás</string>

    //menú padre
    <string name="title_activity_padre">padre</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"></string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Editar información</string>
    <string name="menu_slideshow">Cerrar Sesión</string>
    <string name="lblmapa">Mapa</string>
    <string name="home_second">Home Second</string>
    <string name="btnSolicitar">Solicitar niñera</string>
    <string name="btnReservar">Reservar niñera</string>
    <string name="lblsolicitar">Solicitar niñera</string>
    <string name="lblterminos">Terminos y condiciones</string>
    <string name="lblterminos2">Terminos y condiciones</string>

    //solicitar desde el perfon del padre
    <string name="txtCantidad">Cantidad de niños</string>
    <string name="txtHoras">Número de horas</string>
    <string name="txtPreciosugerido">Precio sugerido</string>
    <string name="txtRecomendacion">Especifique si tiene alguna recomendación respecto a su hijo/a</string>
    <string name="btnEnviar">Aceptar</string>


    //actualizar padre
    <string name="txtactualizarpadre">Actualizar información</string>
    <string name="txtcedula">Cédula</string>
    <string name="txtcorreo">Correo</string>
    <string name="txtdireccion">Dirección</string>
    <string name="txttelefono">Teléfono</string>
    <string name="txtBuscar">Buscar</string>
    <string name="btnbuscar">Buscar</string>
    <string name="btnActualizar">Aceptar</string>


    //reservar padre
    <string name="txtPrecio">Precio sugerido</string>
    <string name="txtNiños">Número de niños</string>
    <string name="txtNiñera">Nombre de la niñera</string>
    <string name="txtFecha">Fecha</string>
    <string name="txtHora">Hora</string>
    <string name="btnReservar2">Aceptar</string>

    //cambiar contraseña padre
    <string name="txtContraseña">Contraseña actual</string>
    <string name="txtContraseñaR">Nueva contraseña</string>
    <string name="txtReperitC">Confirmar contraseña</string>
    <string name="btnCambiar">Aceptar</string>
    <string name="cambiarpadre">Cambiar contraseña</string>

    //niñera
    <string name="lblEditar">Editar información</string>
    <string name="lblInicio">Nas</string>
    <string name="lblActualizar">Actualizar información</string>
    <string name="lblCambiar">Cambiar contraseña</string>
    <string name="lblSolicitudes">Solicitudes</string>
    <string name="btnTrabajar">Comenzar a trabajar</string>
    <string name="lblcalificacion">Mis calificaciones</string>


    <string name="btnActualizarninera1">Actualizar información</string>
    <string name="btnCambiarninera">Cambiar contraseña</string>

    //actualizar niñera
    <string name="txtactualizarpadre1">Actualizar información</string>
    <string name="txtcedula1">Cédula</string>
    <string name="txtcorreo1">Correo</string>
    <string name="txtdireccion1">Dirección</string>
    <string name="txttelefono1">Teléfono</string>
    <string name="btnbuscar1">Buscar</string>
    <string name="btnActualizar1">Aceptar</string>

    //cambiar contraseña niñera
    <string name="txtContraseña4">Contraseña actual</string>
    <string name="txtContraseñaR1">Nueva contraseña</string>
    <string name="txtRepetir">Confirmar contraseña</string>
    <string name="btnCambiarninera1">Aceptar</string>

    //admin
    <string name="lblInicio1">Nas</string>
    <string name="lblUsuarios">Usuarios registrados</string>
    <string name="btnMostrar">Usuarios registrados</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ninera">ninera</string>
    <string name="title_activity_admin">admin</string>
    <string name="title_activity_maps">Map</string>
</resources>
