<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home1"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_galery1"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/calificacion"
            android:title="@string/lblcalificacion" />
        <item
            android:id="@+id/terminos2"
            android:title="@string/lblterminos2" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>
