<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registroN">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="136dp"
        android:layout_height="134dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/txtNombre1"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/txtNombre1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtCedula2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtCedula2"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/txtCedula2"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/txtTelefono2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtTelefono2"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/txtTelefono2"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/txtDireccion2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtDireccion2"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/txtDireccion2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtCorreo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtCorreo3"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/txtCorreo3"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/txtContraseña3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtContraseña3"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:hint="@string/txtContraseña3"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnSiguiente3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAtras3"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="56dp"
        android:background="#00BCD4"
        android:onClick="atras"
        android:text="@string/btnAtras3"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toEndOf="@+id/btnSiguiente3" />

    <Button
        android:id="@+id/btnSiguiente3"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="56dp"
        android:background="#00BCD4"
        android:onClick="Registrar"
        android:text="@string/btnSiguiente3"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>