<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actualizarpadre">

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="121dp"
        android:layout_height="42dp"
        android:layout_marginBottom="128dp"
        android:background="#00BCD4"
        android:text="@string/btnActualizar"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/telefono1"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/txttelefono"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/correo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/correo1"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/txtcorreo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/direccion1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/direccion1"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/txtdireccion"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnActualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="323dp"
        android:layout_height="76dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/telefono1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/cedula1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtcedula1"
            android:inputType="number" />

        <Button
            android:id="@+id/btnbuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:text="@string/btnbuscar"
            android:textColor="#fff" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="163dp"
        android:layout_height="153dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:layout_editor_absoluteY="36dp" />

</androidx.constraintlayout.widget.ConstraintLayout>