<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actualizarninera">


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="181dp"
        android:layout_height="154dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/telefono2"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/txttelefono1"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/correo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/correo2"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/txtcorreo1"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/direccion2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/direccion2"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/txtdireccion1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnActulizar1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="318dp"
        android:layout_height="84dp"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/telefono2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/cedula2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtcedula1"
            android:inputType="number" />

        <Button
            android:id="@+id/btnbuscar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:text="@string/btnbuscar1"
            android:textColor="#fff" />
    </LinearLayout>

    <Button
        android:id="@+id/btnActulizar1"
        android:layout_width="121dp"
        android:layout_height="42dp"
        android:layout_marginBottom="120dp"
        android:background="#00BCD4"
        android:text="@string/btnActualizar1"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>