<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".solicitarninera">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="175dp"
        android:layout_height="153dp"
        android:layout_marginTop="36dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/txtCantidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/txtCantidad"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txtHoras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtHoras"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/txtHoras"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/txtPreciosugerido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtPreciosugerido"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/txtPreciosugerido"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/txtRecomendacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtRecomendacion"
        android:layout_width="288dp"
        android:layout_height="134dp"
        android:layout_marginBottom="52dp"
        android:hint="@string/txtRecomendacion"
        app:layout_constraintBottom_toTopOf="@+id/btnEnviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:layout_marginBottom="52dp"
        android:background="#00BCD4"
        android:onClick="mapa"
        android:text="@string/btnEnviar"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>