<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cambiarnineraFragment">


    <Button
        android:id="@+id/btnCambiarninera1"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:layout_marginBottom="136dp"
        android:background="#00BCD4"
        android:text="@string/btnCambiarninera1"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtContraseñaR1"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/txtContraseñaR1"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/txtRepetir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtRepetir"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="108dp"
        android:ems="10"
        android:hint="@string/txtRepetir"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnCambiarninera1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtContraseña4"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/txtContraseña4"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/txtContraseñaR1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="136dp"
        android:layout_height="126dp"
        android:layout_marginTop="48dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/txtContraseña4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />
</androidx.constraintlayout.widget.ConstraintLayout>